[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = { version = "1.0", features = ["derive", "extra-traits"] }
quote = "1.0.10"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.34"
